--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
   <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
       rel="stylesheet">
-
+      <!-- thêm dòng này để hiển thị màu và hình cho button thêm-xóa-sửa -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+      
 </head>
 <body>
   <app-root></app-root>
