active and block staff, newspaper

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
       rel="stylesheet">
       <!-- thêm dòng này để hiển thị màu và hình cho button thêm-xóa-sửa -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+      <!-- Css của giao diện client -->
+      <!-- <link rel="stylesheet" href="assets/client/css/min.desktop.frontend.2021.css"> -->
       
 </head>
 <body>
