handle active and block

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontendDuAnTN</title>
+  <title>Admin Thanh Xuan</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/admin/img/logo-home.png">
@@ -14,9 +14,6 @@
       <!-- thêm dòng này để hiển thị màu và hình cho button thêm-xóa-sửa -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-      <!-- Css của giao diện client -->
-      <!-- <link rel="stylesheet" href="assets/client/css/min.desktop.frontend.2021.css"> -->
-      
 </head>
 <body>
   <app-root></app-root>
